# Finacesec2

./: .env.example  .gitignore  AGENTS.md  FEATURES.md  README.md  RULES.md  SECURITY_ARCHITECTURE.md  SOUL.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  health.py  market.py  orders.py  portfolio.py
backend/app/core/: cache.py  config.py  enums.py  logging.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/fds/: engine.py  rules.py  types.py
backend/app/models/: __init__.py  account.py  additional_auth_request.py  admin_action.py  audit_log.py  auth_session.py  base.py  device_history.py  execution.py  login_history.py  order.py  risk_event.py  rule_hit.py  security_device.py  stock.py  user.py  user_behavior_profile.py
backend/app/schemas/: account.py  admin.py  auth.py  common.py  lab.py  market.py  order.py  risk_event.py
backend/app/services/: admin_service.py  audit_service.py  auth_service.py  chart_service.py  lab_service.py  live_market_data.py  market_data.py  order_service.py  portfolio_service.py  risk_service.py  security_service.py  seed_service.py  trading_service.py
backend/tests/: conftest.py  test_app.py
backend/verve_fds_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  HtsChart.jsx  htsData.js  styles.css
frontend/src/api/: client.js
